Tue Oct 18 11:29:04 BST 2005 (trog)
-----------------------------------
  * libclamav/others.c,h: Add generic bitset implementation

  * libclamav/ole2_extract.c: Make sure the property tree doesn't loop

Fri Sep 30 17:00:49 BST 2005 (njh)
----------------------------------
  * clamav-milter:	Added --freshclam-monitor

Mon Sep 26 19:40:14 CEST 2005 (tk)
----------------------------------
  * libclamav/matcher.c: cl_build: cli_addtypesigs was corrupting AC trie in
			 engine->root[0]

Fri Sep 23 04:05:07 CEST 2005 (tk)
----------------------------------
  * libclamav/clamav.h: split cl_node into cli_matcher and cl_engine
  * libclamav/readdb.c: read signatures into separate trees depending on
			their type
  * libclamav/matcher.c: scan data with suitable trees

Mon Sep 19 01:15:02 CEST 2005 (tk)
----------------------------------
  * libclamav/elf.c: add cli_elfheader()
  * libclamav/execs.h: new file
  * libclamav/matcher.c: support ELF files in cli_caloff()

Fri Sep 16 16:49:14 CEST 2005 (tk)
----------------------------------
  * libclamav/upx.c: fix possible buffer overflow (acab)

Fri Sep 16 16:39:37 CEST 2005 (tk)
----------------------------------
  * libclamav/fsg.c: fix possible infinite loop (acab)

Thu Sep 15 23:32:07 CEST 2005 (tk)
----------------------------------
  * libclamav/others: increase f-level

Thu Sep 15 14:03:15 CEST 2005 (tk)
----------------------------------
  * libclamav/mspack/mszipd.c: zipd_read_input: fake one more byte if input
			       stream gets overrun

Mon Sep  5 18:18:24 CEST 2005 (tk)
----------------------------------
  * libclamav/matcher.c: handle EP-n offset specification (requested by
			 Arnaud Jacques)

Thu Sep  1 22:04:00 BST 2005 (njh)
----------------------------------
  * libclamav/untar.c:	Added support for various GNU extensions: volume
				  headers, long file names and long names for
				  symbolic links. Code by Daniel Fahlgren
				  fahlgren <AT> ardendo.se

Mon Aug 29 17:00:36 CEST 2005 (tk)